# CAROL

./: README.md  createGraspitFromStl.bash  definitions.h  startSession.bash
create_gazebo_files/: main.py
create_graspit_files/: main.py
graspitCpp/: CMakeLists.txt  main.cpp  main.h
graspitCpp/utils/: LogFile.cpp  LogFile.h  Planner.cpp  Planner.h  helper.cpp  helper.h  timer.h
moveitCpp/: CMakeLists.txt  config.h  logfile_strings.h  main.cpp  main.h  startMoveit.bash
moveitCpp/gazebo/: publisher.cpp  publisher.h  subscriber.cpp  subscriber.h
moveitCpp/graspit/: converter.cpp  converter.h  graspit_subscriber.cpp  graspit_subscriber.h
moveitCpp/logging/: LogFile.cpp  LogFile.h
moveitCpp/math/: frame_transformation.cpp  frame_transformation.h  timer.cpp  timer.h
moveitCpp/ros/: MoveitPublisher.cpp  MoveitPublisher.h  ros_service.cpp  ros_service.h
moveitCpp/rviz/: environment.cpp  environment.h  planner.cpp  planner.h
own_msg/: CMakeLists.txt  package.xml
own_msg/msg/: eigenGraspResult.msg  youBotJoints.msg
template_files/gazebo/template/: model.config  model.sdf
template_files/graspit/: template_world.xml
youBot/: main.cpp  main.h
youBot/manipulator/: Manipulator.cpp  Manipulator.h
youBot/moveit/: MoveItSubscriber.cpp  MoveItSubscriber.h
